# linenoise

./: .gitignore  API_GUIDE.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  REVIEW.md  TODO.md  example-lua.c  example.c  linenoise.c  linenoise.h
.github/workflows/: ci.yml
cmake/: linenoiseConfig.cmake.in
src/: completion.c  highlight_lua.c  history.c  keyparser.c  linenoise.c  render.c  terminal_posix.c  terminal_windows.c  utf8.c
src/internal/: history.c  render.c
test/: example-lua.c  example-syntax.c  example.c  linenoise-test.c  test-treesitter.c
